<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.fragment.FilterFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/title_filter"
        android:textAlignment="center"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txt_title_episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_status"
            tools:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipgroup_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_alive"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_chip_alive"
                android:textSize="14sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_dead"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_chip_dead"
                android:textSize="14sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_unknown"
                style="@style/ChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_chip_unknown"
                android:textSize="14sp" />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_make_filter"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_filter_button"
        android:text="@string/title_btn_apply"
        android:textColor="@color/white"
        app:backgroundTint="@null" />

</LinearLayout>