<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_gray"
    tools:context=".ui.fragment.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/img_character"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.010"
            tools:ignore="ContentDescription" />

        <CheckBox
            android:id="@+id/checkbox_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:buttonTint="@color/blue_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.010"/>

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:maxLines="2"
            android:textSize="20sp"
            style="@style/TextColor"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_character" />

        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_name" />

        <TextView
            android:id="@+id/txt_specie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_status" />

        <TextView
            android:id="@+id/txt_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_specie" />


        <TextView
            android:id="@+id/txt_number_of_episodes_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_number_of_episodes"
            style="@style/TextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_gender"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_number_of_episodes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp"
            android:maxLines="1"
            style="@style/TextColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/txt_number_of_episodes_tittle"
            app:layout_constraintTop_toBottomOf="@+id/txt_number_of_episodes_tittle" />

        <TextView
            android:id="@+id/txt_origin_location_tittle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:maxLines="1"
            android:text="@string/title_origin"
            style="@style/TextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/txt_number_of_episodes"
            app:layout_constraintTop_toBottomOf="@+id/txt_number_of_episodes" />

        <TextView
            android:id="@+id/txt_origin_location_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/TextColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/txt_origin_location_tittle"
            app:layout_constraintTop_toBottomOf="@+id/txt_origin_location_tittle" />

        <TextView
            android:id="@+id/txt_last_location_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_last_location"
            style="@style/TextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txt_origin_location_info"
            app:layout_constraintTop_toBottomOf="@+id/txt_origin_location_info" />

        <TextView
            android:id="@+id/txt_last_location_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp"
            android:maxLines="1"
            style="@style/TextColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/txt_last_location_tittle"
            app:layout_constraintTop_toBottomOf="@+id/txt_last_location_tittle" />

        <TextView
            android:id="@+id/txt_last_episode_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_last_episode"
            style="@style/TextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txt_last_location_info"
            app:layout_constraintTop_toBottomOf="@+id/txt_last_location_info" />

        <TextView
            android:id="@+id/txt_last_episode_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp"
            style="@style/TextColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/txt_last_episode_tittle"
            app:layout_constraintTop_toBottomOf="@+id/txt_last_episode_tittle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>